fix: refactor RuleRecipeGroupCheckBlue & modify RuleInhibitionCheckStatus _M case & modify RuleForwardProcess to 'OR' pattern